# dtb-2025-fnirs

./: .gitignore  .nojekyll  LICENSE  Makefile  README.md  TODO.md  _quarto.yml  index.html  index.qmd  main.py  pyproject.toml  references.bib  robots.txt  search.json  sitemap.xml
_extensions/gongcastro/prezconf/: _extension.yml  style.scss  title-slide.html
docs/: index.html  search.json
