[project]
name = "dtb-2025-fnirs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.3",
    "mne>=1.10.0",
    "mne-nirs>=0.7.1",
    "nilearn>=0.12.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
]
